[tool.poetry]
name = "selenium-fetch"
version = "0.1.1"
description = "access `fetch()` with selenium!"
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "selenium_fetch"}]
homepage = "https://github.com/aprilahijriyan/selenium-fetch"
repository = "https://github.com/aprilahijriyan/selenium-fetch"
keywords = ["selenium", "fetch", "undetected-chromedriver", "cloudflare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]


[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.2"
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
undetected-chromedriver = "^3.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
